--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,94 @@
 .App {
   text-align: center;
+  background-color: #d3d3d3;
+  min-height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.headerBar {
+  background-color: #344152;
+  display: flex;
+  color: white;
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
+    0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+  & header h1 {
+    margin: 0;
+    padding: 16px;
+    font-size: 22px;
+    font-weight: 400;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.dasboardContainer {
+  width: 100%;
+  display: flex;
+  gap: 28px;
+  flex-wrap: wrap;
+  padding: 80px 32px;
+}
+
+.resourceBox {
+  border: 1px solid #000;
+  padding: 24px 16px;
+  border-radius: 3px;
+  border-color: transparent;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 220px;
+  min-height: 140px;
+  background-color: white;
+  box-shadow: 1px 9px 20px 1px gray;
 }
 
-.App-link {
-  color: #61dafb;
+.resourceBox h2 {
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 4px;
+  font-size: 22px;
+  font-weight: 400;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.resourceDataContainer {
+  display: flex;
+  flex-direction: column;
+}
+
+.resourceDataContent {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.resourceDataField {
+  flex: 1;
+  font-size: 14px;
+  justify-content: space-between;
+
+  > .status_success {
+    color: white;
+    font-size: 18px;
+    padding: 4px 0;
+    background-color: green;
   }
-  to {
-    transform: rotate(360deg);
+
+  > .status_error {
+    color: white;
+    font-size: 18px;
+    padding: 4px 0;
+    background-color: red;
+  }
+
+  > .hostname_error {
+    color: red;
+    font-size: 24px;
+    text-transform: uppercase;
+  }
+
+  > .time_error {
+    color: red;
+    p {
+      margin-top: 0;
+      margin-bottom: 4px;
+    }
   }
 }
